tests/ui/coroutine/async_gen_fn.stderr
error: `async gen` functions are not supported
  --> $DIR/async_gen_fn.rs:8:1
   |
LL | async gen fn foo() {}
   | ^^^^^^^^^

error: aborting due to 1 previous error

